adds patch